# architectural-profiles

./: README.md  expressiverange.py  heuristicrun.py  pyproject.toml  requirements.txt  run_example.py  run_experiments.py  temp.vox  voxelmeaing.txt
clingo/: analyse.py  aspresult.py  blockshapesolving.py  blocksolving.py  call.py  clingo.lp  clingosolver.py  constants.py  createtemplate.py  shapegeneration.py  shapeutil.py  util.py
constraints/: declarativeconstraint.py  imgconstraints.py  volumeconstraints.py  volumetexture.py
metrics/: expressivemetrics.py  getexperiments.py  graphanalysis.py
oldprofiles/: addmetarules.py  habitationprofile.py  profilemerger.py  rulecombiner.py  tilecombiner.py  util.py
profiles/: mountaintownbasicconnected.json  profile.py  shapebasestairsstreetconstruction.json
pyvox/: parser.py
results/: bigtest1.vox  cool.vox  densityexterior.vox  densityinterior.vox  height2-1.vox  height2-2.vox  heightrange-1.vox  interior1exterior-1.vox  littlestairs.vox  mountaintownall2connected.vox  mountaintownconnected1.vox  mountaintowngogo.vox  mountaintownhousesrange.vox  mountaintownlessstairs.vox  mountaintownnot1.vox  mountaintownnot2.vox  mountaintownnot3.vox  mountaintownnot4.vox  mountaintownnotconnected.vox  muchstairs.vox  simple.vox  weightnostairs.vox  weightsbadvoidfilled.vox  weightstairs.vox
run_utils/: Experiments.ipynb  adjacencyfromexample.py  batch.py  convertallvoxtoobj.py  cornertest.py  createmany.py  exportresults.py  generateexperimentsnotebook.py  habitationresolver.py  profileimporter.py  reflectexample.py  (+10 more)
(+398 files in other folders)
